# FreeAI

./: .gitignore  CMakeCache.txt  CMakeLists.txt  FreeAI  FreeAI.cbp  LICENSE  Makefile  README.md  cmake_install.cmake
src/: ag.cpp  main.cpp  population.cpp  population.h
